# Stagiu-de-practica

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.c  main.cpp
